// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Side Navigation Component does not render when items are empty 1`] = `
<div>
  


</div>
`;

exports[`Side Navigation Component renders with all attributes provided 1`] = `
<div>
  

  
  <div
    class="ct-side-navigation ct-theme-dark ct-vertical-spacing-inset--both additional-class"
    data-test="true"
  >
    
                  


  
    <h2
      class="ct-heading ct-theme-dark ct-side-navigation__title"
    >
      Main Navigation
    </h2>
    
              





            
    <ul
      class="ct-menu ct-menu--level-0 ct-theme-dark ct-side-navigation__menu"
      data-component-name="ct-menu"
    >
      
    
          
                  
      
            
                    
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        


  
  
        <a
          class="ct-link ct-theme-dark     ct-menu__item__link"
          href="/"
          title="Home"
        >
          

    Home  
        </a>
        

        
        
      
      </li>
      
          
                  
      
            
                    
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        


  
  
        <a
          class="ct-link ct-theme-dark     ct-menu__item__link"
          href="/about"
          title="About"
        >
          

    About  
        </a>
        

        
        
      
      </li>
      
          
                  
      
            
                    
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        


  
  
        <a
          class="ct-link ct-theme-dark     ct-menu__item__link"
          href="/services"
          title="Services"
        >
          

    Services  
        </a>
        

        
        
      
      </li>
      
          
                  
      
            
                    
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        


  
  
        <a
          class="ct-link ct-theme-dark     ct-menu__item__link"
          href="/contact"
          title="Contact"
        >
          

    Contact  
        </a>
        

        
        
      
      </li>
      
    
          
    </ul>
    
      
  
  </div>
  

</div>
`;

exports[`Side Navigation Component renders with only required attributes 1`] = `
<div>
  

  
  <div
    class="ct-side-navigation ct-theme-light  "
  >
    
        





            
    <ul
      class="ct-menu ct-menu--level-0 ct-theme-light ct-side-navigation__menu"
      data-component-name="ct-menu"
    >
      
    
          
                  
      
            
                    
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        


  
  
        <a
          class="ct-link ct-theme-light     ct-menu__item__link"
          href="/"
          title="Home"
        >
          

    Home  
        </a>
        

        
        
      
      </li>
      
    
          
    </ul>
    
      
  
  </div>
  

</div>
`;

exports[`Side Navigation Component renders with some attributes missing 1`] = `
<div>
  

  
  <div
    class="ct-side-navigation ct-theme-light  "
  >
    
        





            
    <ul
      class="ct-menu ct-menu--level-0 ct-theme-light ct-side-navigation__menu"
      data-component-name="ct-menu"
    >
      
    
          
                  
      
            
                    
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        


  
  
        <a
          class="ct-link ct-theme-light     ct-menu__item__link"
          href="/"
          title="Home"
        >
          

    Home  
        </a>
        

        
        
      
      </li>
      
          
                  
      
            
                    
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        


  
  
        <a
          class="ct-link ct-theme-light     ct-menu__item__link"
          href="/about"
          title="About"
        >
          

    About  
        </a>
        

        
        
      
      </li>
      
    
          
    </ul>
    
      
  
  </div>
  

</div>
`;
